crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__backtick_in_expressions.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            Infix(
                                InfixExpr {
                                    lhs: Pipeline(
                                        Pipeline {
                                            env: [],
                                            commands: [
                                                Command {
                                                    name: "cat",
                                                    args: [
                                                        String(
                                                            "file.txt",
                                                        ),
                                                    ],
                                                    merge_stderr: false,
                                                },
                                            ],
                                            write: None,
                                        },
                                    ),
                                    rhs: String(
                                        "nice",
                                    ),
                                    op: Add,
                                },
                            ),
                        ],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
